# meu-orcamento-api

./: pyproject.toml
meu_orcamento_api/: app.py  spengins.json  users.json
meu_orcamento_api/models/: models.py  spendings.py
meu_orcamento_api/spendings/: .gitignore  spengins.py
meu_orcamento_api/user/: user.py
tests/: test_meu_orcamento_api.py
