[tool.poetry]
name = "meu-orcamento-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
flask-pydantic-spec = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tinydb = "^4.7.0"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
